tests/compile-fail/integration__integration__general__stackless__untyped_var.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:29:9
   │
29 │         var x;
   │         ^^^ untyped variables not supported by format


